--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,32 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.container{
+  background-color:rgba(173, 216, 230, 0.5);
+  text-align: center;
+  height: 60vh;
+  box-shadow: 3px 2px 1px hsla(0, 0%, 0%, 0.4);
+  border: 1px solid black;
 }
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
+h1{
+  text-align: center;
+  font-size: 2.5rem;
+  color: hsla(0, 100%, 50%, 0.8);
+  text-shadow: 2px 1px 1px hsla(0, 0%, 0%, 0.1);
 }
-a:hover {
-  color: #535bf2;
+.counter{
+  font-size: 5rem;
 }
-
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
+.btn{
+  padding: 10px 20px;
+  background-color: hsla(0, 0%, 50%, 0.5);
+  color: hsla(0, 0%, 0%, 0.90);
+  font-weight: bolder;
+  border: 2px solid black;
+  border-radius: 4px;
+  margin: 20px;
   cursor: pointer;
-  transition: border-color 0.25s;
+  box-shadow: 2px 3px 2px hsla(0, 0%, 0%, 0.25);
 }
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.btn:hover{
+  background-color: hsla(0, 0%, 50%, 0.99);
+  color: hsla(0, 0%, 0%, 0.90);
+ 
 }
